--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ description: "A great Jekyll theme developed by Sal @wowthemesnet."
         </div>
     </div>
 </div>     
+{% endif %}
+{% endfor %}
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
 {% for post in site.posts %} 
