--- a/_pages/Sponsors.html
+++ b/_pages/Sponsors.html
@@ -1,3 +1,10 @@
+---
+title: "Sponsors"
+layout: default
+permalink: "/Sponsors.html"
+---
+
+
 {% if page.sponsors %}
 {% assign tiers=site.data.[page.sponsors] %}
     <div class="columns is-multiline">
