--- a/_pages/Sponsors.html
+++ b/_pages/Sponsors.html
@@ -5,8 +5,8 @@ permalink: "/Sponsors.html"
 ---
 
 
-{% if page.sponsors %}
-{% assign tiers=site.data.[page.sponsors] %}
+<!--{% if page.sponsors %}
+{% assign tiers=site.data.[page.sponsors] %}-->
     <div class="columns is-multiline">
         {% for tier in tiers %}
         <div class="column is-12">
@@ -46,4 +46,4 @@ permalink: "/Sponsors.html"
         </div>
         {% endfor %}
     </div>
-{% endif %}
+<!--{% endif %}-->
