--- a/_pages/sponsors.html
+++ b/_pages/sponsors.html
@@ -1,34 +1,48 @@
 ---
 title: "Sponsors"
-layout: default
+layout: page
 permalink: "sponsors.html"
 ---
 
+{% if page.sponsors %}
+{% assign tiers=site.data.[page.sponsors] %}
+    <div class="columns is-multiline">
+        {% for tier in tiers %}
+        <div class="column is-12">
+            <p class="title is-3 has-text-centered">
+                <span>{{ tier.tier_name }}</span>
+            </p>
+            <p class="subtitle has-text-centered">
+                <span class="icon is-large gh-sponsor"><i class="fas fa-heart fa-2x"></i></span>
+            </p>
+            <div class="columns is-centered">
+                <div class="column is-6 content has-text-centered">
+                    <p>{{ tier.description | markdownify }}</p>
+                </div>
+            </div>
 
-<div class="container">
-<h4 class="font-weight-bold spanborder"><span>{{page.title}}</span></h4>
-    <div class="row gap-y listrecent listrecent listauthor">
-    {% for author in site.authors %}
-        <div class="col-lg-6 mb-4">
-            <div class="p-4 border rounded">
-            <div class="row">
-            <div class="col-md-3 mb-4 mb-md-0"><img alt="{{ author[1].name }}" src="{{site.baseurl}}/{{ author[1].avatar }}" class="rounded-circle" height="80" width="80"></div>
-            <div class="col-md-9">
-            <a href="{{site.baseurl}}/author-{{ author[1].name | slugify }}">
-            <h4 class="text-dark mb-0"> {{ author[1].name }} </h4>
-            <small class="d-inline-block mt-1 mb-3 font-weight-normal">(View Posts)</small>
-            <div class="excerpt">{{ author[1].bio }}</div>
-            </a>
-            <div class="icon-block mt-3 d-flex justify-content-between">  
-            <div>
-            <a target="_blank" href="{{ author[1].twitter }}"><i class="fab fa-twitter text-muted" aria-hidden="true"></i></a>  &nbsp;
-            <a target="_blank" href="{{ author[1].site }}"><i class="fa fa-globe text-muted" aria-hidden="true"></i></a> &nbsp;
-            </div>
-            </div>
-            </div>
-            </div>
+            <div class="columns is-multiline is-centered">
+                {% for sponsor in tier.sponsors %}
+                <div class="column {% if tier.size == 'large' %} is-4-desktop is-6-tablet {% else %} is-3-desktop is-4-tablet {% endif %}">
+                    <div class="box has-text-centered">
+                        <p class="title {% if tier.size == 'large' %} is-4 {% elsif tier.size == 'small' %} is-6 {% else %} is-5 {% endif %}">
+                            {{ sponsor.name }}
+                        </p>
+                        <p class="subtitle is-6">
+                            {% if sponsor.profile %}
+                            <a href="{{ sponsor.profile }}" class="is-link is-small">View Profile</a>
+                            {% else %}
+                            &nbsp;
+                            {% endif %}
+                        </p>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </div>
-    {% endfor %}
+        <div class="column is-12">
+            <hr />
+        </div>
+        {% endfor %}
     </div>
-</div>
+{% endif %}
