--- a/_pages/sponsors.html
+++ b/_pages/sponsors.html
@@ -2,7 +2,7 @@
 ---
 title: "Sponsors"
 layout: default
-permalink: "sponsors.html"
+permalink: "/authors-list.html"
 ---
 
 <div class="container">
