--- a/_pages/sponsors.html
+++ b/_pages/sponsors.html
@@ -1,7 +1,7 @@
 ---
-title: "Authors"
+title: "Sponsors"
 layout: default
-permalink: "/authors-list.html"
+permalink: "/sponsors.html"
 ---
 
 <div class="container">
