--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -8,7 +8,21 @@ permalink: "/authors-list.html"
 <h4 class="font-weight-bold spanborder"><span>{{page.title}}</span></h4>
     <div class="row gap-y listrecent listrecent listauthor">
     {% for author in site.authors %}
-        <div class="col-lg-6 mb-4">
+ 
+    <div class="column is-12">
+        <p class="title is-3 has-text-centered">
+            <span>{{ author.author[1].name }}</span>
+        </p>
+        <p class="subtitle has-text-centered">
+            <span class="icon is-large gh-sponsor"><i class="fas fa-heart fa-2x"></i></span>
+        </p>
+        <div class="columns is-centered">
+            <div class="column is-6 content has-text-centered">
+                <p>{{ author.description | markdownify }}</p>
+            </div>
+        </div>   
+        
+<!--        <div class="col-lg-6 mb-4">
             <div class="p-4 border rounded">
             <div class="row">
             <div class="col-md-3 mb-4 mb-md-0"><img alt="{{ author[1].name }}" src="{{site.baseurl}}/{{ author[1].avatar }}" class="rounded-circle" height="80" width="80"></div>
@@ -27,7 +41,7 @@ permalink: "/authors-list.html"
             </div>
             </div>
             </div>
-        </div>
+        </div>       -->
     {% endfor %}
     </div>
 </div>
