--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -12,15 +12,23 @@ permalink: "/authors-list.html"
     <div class="column is-12">
         <p class="title is-3 has-text-centered">
             <span>{{ author.author[1].name }}</span>
-        </p>
-        <p class="subtitle has-text-centered">
-            <span class="icon is-large gh-sponsor"><i class="fas fa-heart fa-2x"></i></span>
-        </p>
+
+        <!-- Name and description of Author>
         <a href="{{site.baseurl}}/author-{{ author[1].name | slugify }}">
         <h4 class="text-dark mb-0"> {{ author[1].name }} </h4>
         <small class="d-inline-block mt-1 mb-3 font-weight-normal">(View Posts)</small>
         <div class="excerpt">{{ author[1].bio }}</div>
-        </a>
+        </a>        
+        
+        <!--Heart Icon-->
+        </p>
+        <p class="subtitle has-text-centered">
+            <span class="icon is-large gh-sponsor"><i class="fas fa-heart fa-2x"></i></span>
+        </p>
+        
+
+
+
         <div class="columns is-centered">
             <div class="column is-6 content has-text-centered">
                 <p>{{ author.description | markdownify }}</p>
