--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -13,7 +13,7 @@ permalink: "/authors-list.html"
         <p class="title is-3 has-text-centered">
             <span>{{ author.author[1].name }}</span>
 
-        <!-- Name and description of Author>
+        <!-- Name and description of Author-->
         <a href="{{site.baseurl}}/author-{{ author[1].name | slugify }}">
         <h4 class="text-dark mb-0"> {{ author[1].name }} </h4>
         <small class="d-inline-block mt-1 mb-3 font-weight-normal">(View Posts)</small>
