--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -10,6 +10,10 @@ permalink: "/authors-list.html"
     {% for author in site.authors %}
  
     <div class="column is-12">
+    <div class="columns is-centered">
+    <div class="column is-6 content has-text-centered">
+        <p>{{ tier.description | markdownify }}</p>
+    </div>
      
         <!-- Author icon -->
         <div class="col-md-3 mb-4 mb-md-0"><img alt="{{ author[1].name }}" src="{{site.baseurl}}/{{ author[1].avatar }}" class="rounded-circle" height="80" width="80"></div>
