--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -33,7 +33,8 @@ permalink: "/authors-list.html"
         </p>
         </div>
         
-
+        <div class="icon-block mt-3 d-flex justify-content-between">  
+        <div>
 
 
         <div class="columns is-centered">
