--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -11,6 +11,8 @@ permalink: "/authors-list.html"
  
     <div class="column is-12">
     <div class="columns is-centered">
+    <div class="row">
+    <div class="row is-centered">
 
      
         <!-- Author icon -->
