--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -12,7 +12,7 @@ permalink: "/authors-list.html"
     <div class="column is-12">
     <div class="columns is-centered">
     <div class="row">
-    <div class="row is-centered">
+    <div class="rows is-centered">
 
      
         <!-- Author icon -->
