--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -44,6 +44,7 @@ permalink: "/authors-list.html"
                 <p>{{ tier.description | markdownify }}</p>
             </div>
         </div>
+        </div>
 
 
         
