--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -11,7 +11,7 @@ permalink: "/authors-list.html"
  
     <div class="column is-12">
     <div class="columns is-centered">
-    <div class="row">
+    <div class="row is-12">
     <div class="rows is-centered">
 
      
@@ -44,7 +44,7 @@ permalink: "/authors-list.html"
                 <p>{{ tier.description | markdownify }}</p>
             </div>
         </div>
-        </div>
+
 
 
         
